--- a/custom-css/style.css
+++ b/custom-css/style.css
@@ -5,5 +5,18 @@
 .banner-img{
     background-image: url(../images/banner.png);
     height: 100vh;
-    width: auto;
+    width: auto lg-mx-auto;
+    background-repeat: no-repeat;
+}
+.carousel-img-1{
+    background-image: url(../images/slider-1.jpg);
+    height: 100vh;
+}
+.carousel-img-2{
+    background-image: url(../images/slider-2.jpg);
+    height: 100vh;
+}
+.carousel-img-3{
+    background-image: url(../images/slider-3.jpg);
+    height: 100vh;
 }
