--- a/custom-css/style.css
+++ b/custom-css/style.css
@@ -7,6 +7,7 @@
     height: 100vh;
     width: auto lg-mx-auto;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .carousel-img-1{
     background-image: url(../images/slider-1.jpg);
